--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'Cuba -- Juvenile fiction'
 - !lcsh 'Adventure stories'
 - !lcsh 'Ship captains -- Juvenile fiction'
+- GITenberg
 title: A Voyage with Captain Dynamite
 url: http://www.gutenberg.org/ebooks/25144
